# downloader

./: .gitignore  package-lock.json  package.json
backend/: CMakeLists.txt  README.md
backend/include/: placeholder.h
backend/src/: main.cpp
backend/tests/: README.md
docker/: README.md  backend.Dockerfile
docs/: README.md
infra/: README.md
scripts/: placeholder.sh
